--- a/vcastplay-cms/src/app/features/assets/asset-list/asset-list.component.html
+++ b/vcastplay-cms/src/app/features/assets/asset-list/asset-list.component.html
@@ -121,13 +121,16 @@
                     <i class="pi pi-volume-up" [style]="{ 'font-size': '2rem' }"></i> } @case('web')
                     { <i class="pi pi-globe" [style]="{ 'font-size': '2rem' }"></i> }
                     @case('widget') {
-                    <i class="pi pi-layout" [style]="{ 'font-size': '2rem' }"></i> } } }
+                    <i class="pi pi-layout" [style]="{ 'font-size': '2rem' }"></i> } 
+                    @case('youtube') { <img class="w-12" src="assets/socials/youtube.png" [alt]="item.name"> } 
+                    @case('facebook') { <img class="w-12" src="assets/socials/facebook.png" [alt]="item.name"> } } }
                   </div>
                 </div>
               </td>
               <td>
                 <div class="flex flex-col gap-1">
                   <p class="font-semibold">{{ item.name }}</p>
+                  @if(['video', 'image'].includes(item.type)) {
                   <div class="flex gap-2">
                     <p class="text-sm italic">
                       {{ utils.formatSize(item?.fileDetails.size ?? 0) }}
@@ -137,6 +140,7 @@
                       {{ item.fileDetails.resolution?.height ?? 0 }})
                     </p>
                   </div>
+                  }
                 </div>
               </td>
               <td><p-tag [value]="item.type.toUpperCase()" severity="info" /></td>
@@ -226,30 +230,54 @@
   modal
 >
   <div class="px-4">
-    <p>
-      Hello! 👋 I'm your AI assistant, here to help you bring your ideas to life. Whether you need
-      to generate an image, create a video, or craft engaging content, I've got you covered. Just
-      tell me what you need — let's get started! 🚀
-    </p>
+    @if (step > 0) {
+      <p>This is a preview of the content</p>
+    } @else {
+      <p>
+        Hello! 👋 I'm your AI assistant, here to help you bring your ideas to life. Whether you need
+        to generate an image, create a video, or craft engaging content, I've got you covered. Just
+        tell me what you need — let's get started! 🚀
+      </p>
+    }
   </div>
   <ng-template #footer>
-    <div class="flex flex-col gap-3 w-full">
-      <textarea
-        placeholder="Type your prompt here"
-        name="prompt"
-        id="prompt"
-        cols="30"
-        rows="5"
-        pTextarea
-      ></textarea>
-      <p-button
-        styleClass="!w-full"
-        label="Send"
-        icon="pi pi-send"
-        (onClick)="showPrompt.set(false)"
-        fluid
-      />
-    </div>
+    @if (step > 0) {
+      <div class="flex gap-3">
+        <p-button
+          styleClass="!w-full"
+          label="Back"
+          icon="pi pi-arrow-left"
+          (onClick)="step = 0"
+          text
+          fluid
+        />
+        <p-button
+          styleClass="!w-full"
+          label="Save"
+          icon="pi pi-save"
+          (onClick)="showPrompt.set(false)"
+          fluid
+        />
+      </div>
+    } @else {
+      <div class="flex flex-col gap-3 w-full">
+        <textarea
+          placeholder="Type your prompt here"
+          name="prompt"
+          id="prompt"
+          cols="30"
+          rows="5"
+          pTextarea
+        ></textarea>
+        <p-button
+          styleClass="!w-full"
+          label="Generate"
+          icon="pi pi-send"
+          (onClick)="step = 1"
+          fluid
+        />
+      </div>
+    }
   </ng-template>
 </p-dialog>
 
