--- a/vcastplay-cms/src/app/features/screen-management/screen-management-list/screen-management-list.component.html
+++ b/vcastplay-cms/src/app/features/screen-management/screen-management-list/screen-management-list.component.html
@@ -26,7 +26,7 @@
                             <th>Display</th>
                             <th>Content</th>
                             <th>Response</th>
-                            <th>Last Seen</th>
+                            <th>Last Update</th>
                             <th>Last Screenshot</th>
                             <th>
                                 <div class="text-center">Actions</div>
