--- a/vcastplay-cms/src/app/components/content-selection/content-selection.component.html
+++ b/vcastplay-cms/src/app/components/content-selection/content-selection.component.html
@@ -24,9 +24,7 @@
   <app-schedule-filter (filterChange)="onFilterChange($event)" />
   } }
 
-  <div
-    class="flex-1 min-h-[200px] overflow-y-auto pb-8 border border-[var(--p-surface-300)] rounded-lg"
-  >
+  <div class="flex-1 min-h-[200px] overflow-y-auto border border-[var(--p-surface-300)] rounded-lg">
     <p-table
       #contentTable
       [value]="filteredContentLists()"
@@ -51,7 +49,7 @@
         </tr>
       </ng-template>
       <ng-template #body let-item>
-        <tr class="text-sm" [pSelectableRow]="item" [pSelectableRowDisabled]="!isSelectable">
+        <tr class="text-sm" [pSelectableRow]="item" [pSelectableRowDisabled]="!isSelectable || readonly">
           <td>
             @if (isSelectable) {
             <div class="text-center">
