--- a/vcastplay-cms/src/app/features/schedules/schedules-content-list/schedules-content-list.component.html
+++ b/vcastplay-cms/src/app/features/schedules/schedules-content-list/schedules-content-list.component.html
@@ -1,65 +1,101 @@
-<div class="flex flex-col gap-3 pt-2 h-full">
-    <app-content-selection #contents [selectedTypes]="['asset', 'playlist', 'design']" [includeDesignLayoutWithPlaylist]="true"
-        (contentType)="onContentTypeChange($event)" [selectionContent]="selectedContent" (selectedContents)="onSelectionChange($event)" />
-
-    <p-fieldset legend="Schedule" [formGroup]="contentItemForm">
-        <div class="flex flex-col gap-3">
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-4 relative">
-                <div class="absolute top-0 right-0 bg-gray-200 z-50 opacity-10 h-full w-full" *ngIf="!selectedContent()"></div>
-                <p-floatlabel variant="on">
-                    <p-datepicker inputId="startDate" formControlName="start" appendTo="body" readonlyInput
-                        [maxDate]="calendarDateRange()?.end" (onSelect)="onStartDateChange($event)"
-                        showIcon fluid />
-                    <label for="startDate">Start Date*</label>
-                </p-floatlabel>
-                <p-floatlabel variant="on">
-                    <p-datepicker inputId="startTime" formControlName="start" [timeOnly]="true" appendTo="body" readonlyInput (onSelect)="onStartDateChange($event, true)"
-                        hourFormat="24" stepMinute="5" stepSecond="5" [iconDisplay]="'input'" [showOnFocus]="!formcontrol('allDay').value" showSeconds showIcon fluid>
-                        <ng-template #inputicon let-clickCallBack="clickCallBack">
-                            <i class="pi pi-clock"></i>
-                        </ng-template>
-                    </p-datepicker>
-                    <label for="startTime">Start Time*</label>
-                </p-floatlabel>
-
-                @if (calendarSelectedDate()?.isSpecificTime) {
-                    <p class="italic text-red-500 text-sm col-span-1 md:col-span-2">*This will automatically compute end time</p>
-                }
-
-                <p-floatlabel variant="on">
-                    <p-datepicker inputId="endDate" formControlName="end" appendTo="body" readonlyInput
-                        [minDate]="calendarDateRange()?.start" (onSelect)="onEndDateChange($event)" showIcon fluid />
-                    <label for="endDate">End Date*</label>
-                </p-floatlabel>
-                <p-floatlabel variant="on"  >
-                    <p-datepicker inputId="endTime" formControlName="end" [timeOnly]="true" appendTo="body" [showOnFocus]="false" readonlyInput
-                        hourFormat="24" stepMinute="5" stepSecond="5" [iconDisplay]="'input'" [showSeconds]="true" showIcon fluid>
-                        <ng-template #inputicon let-clickCallBack="clickCallBack">
-                            <i class="pi pi-clock"></i>
-                        </ng-template>
-                    </p-datepicker>
-                    <label for="endTime">End Time*</label>
-                </p-floatlabel>
-            </div>
-        @if (contentItemForm.errors?.['startAfterEnd']) {
-            <p class="italic text-sm text-red-400">*Start Date must be before End Date</p>
-        }
-            <div class="flex gap-2">
-                <p-checkbox formControlName="allDay" binary />
-                <p>All Day</p>
-            </div>
-        </div>
-    </p-fieldset>
-    
-    <div class="flex flex-col gap-2">
-        <p class="text-sm italic" [ngClass]="{ 'text-red-400' : formcontrol('color').errors }">Select event color*:</p>
-        <div class="flex gap-2">
-            @for (color of filteredColor(); track $index) {
-                <div class="border-none w-6 h-6 rounded-full p-0 cursor-pointer outline-none outline-offset-1" 
-                    (click)="onUpdateContentEventColor(color)"
-                    [ngClass]="{ 'ring ring-2 ring-offset-2' : selectedColor?.value == color.hex }"
-                    [style]="{'background-color': color.hex }"></div>
-            }
-        </div>
+<p-dialog
+  header="Add Content"
+  [(visible)]="showAddContents"
+  [style]="{ width: '40rem' }"
+  (onHide)="contentItemForm.reset()"
+  closable
+  modal
+>
+  <div class="flex flex-col gap-5 py-2 select-none">
+    <div class="flex gap-3" [formGroup]="contentItemForm">
+      <p-floatlabel class="w-full" variant="on">
+        <p-datepicker
+          [ngClass]="{ 'ng-invalid ng-dirty': contentItemForm.errors?.['startAfterEnd'] }"
+          inputId="startDate"
+          formControlName="start"
+          appendTo="body"
+          readonlyInput
+          showIcon
+          fluid
+        />
+        <label for="startDate">Start Date*</label>
+      </p-floatlabel>
+      <p-floatlabel class="w-full" variant="on">
+        <p-datepicker
+          [ngClass]="{ 'ng-invalid ng-dirty': contentItemForm.errors?.['startAfterEnd'] }"
+          inputId="endDate"
+          formControlName="end"
+          appendTo="body"
+          readonlyInput
+          showIcon
+          fluid
+        />
+        <label for="endDate">End Date*</label>
+      </p-floatlabel>
     </div>
-</div>
+    @if (contentItemForm.errors?.['startAfterEnd']) {
+    <p class="italic text-sm text-red-400">*Start Date must be before End Date</p>
+    }
+    <app-schedule-hour-list [contentItemForm]="contentItemForm" />
+    <p-inputgroup>
+      <p-inputgroup-addon>
+      <i class="pi pi-file"></i></p-inputgroup-addon>
+      <input
+        id="content"
+        type="text"
+        [value]="content?.name"
+        (focus)="showContentSelection.set(true)"
+        [ngClass]="{ 'ng-dirty ng-invalid': contentItemForm.invalid && contentItemForm.touched && !content?.name }"
+        placeholder="Select Content"
+        readonly
+        pInputText
+        fluid
+      />
+      <p-inputgroup-addon>
+        <p-button
+          (onClick)="showContentSelection.set(true)"
+          icon="pi pi-search"
+          pTooltip="Select Contents"
+          tooltipPosition="bottom"
+        />
+      </p-inputgroup-addon>
+    </p-inputgroup>
+    <div class="flex flex-col gap-2" [formGroup]="contentItemForm">
+      <p class="text-sm italic" [ngClass]="{ 'text-red-400': formcontrol('color').errors }">
+        Select event color*:
+      </p>
+      <div class="grid grid-cols-7 gap-2">
+        @for (color of filteredColor(); track $index) {
+        <div
+          class="border-none w-full h-6 rounded-sm p-0 cursor-pointer outline-none outline-offset-1"
+          (click)="onUpdateContentEventColor(color)"
+          [ngClass]="{ 'ring ring-2 ring-offset-2': selectedColor?.value == color.hex }"
+          [style]="{ 'background-color': color.hex }"
+        ></div>
+        }
+      </div>
+    </div>
+  </div>
+  <ng-template #footer>
+    <p-button label="Close" severity="secondary" (onClick)="showAddContents.set(false)" />
+    <p-button label="Save" severity="success" (onClick)="onClickSaveContent($event)" />
+  </ng-template>
+</p-dialog>
+
+<p-dialog
+  header="Select Content"
+  [(visible)]="showContentSelection"
+  [style]="{ width: '42rem' }"
+  [draggable]="false"
+  closable
+  modal
+>
+  <div class="mt-3">
+    <app-content-selection
+      #contents
+      [selectedTypes]="['asset', 'playlist', 'design']"
+      [includeDesignLayoutWithPlaylist]="true"
+      (selectedContents)="onSelectionChange($event)"
+    />
+  </div>
+</p-dialog>
